# row-types

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CTRex.cabal  ChangeLog  Examples.hs  Examples.lhs  HetList.hs  LICENSE  NOTICE  OpenRecVar.hs  README.md  Records.hs  TypeSym.hs  index.md  makedocs  patchlib  patchmain  rho-types.cabal  row-types.cabal  row-types.cabal.3  stack.yaml
.github/workflows/: ci.yml
Data/: OpenRecords.hs  Row.hs
Data/OpenRecords/: Records.hs  Switch.hs  Variants.hs
Data/OpenRecords/Internal/: Row.hs
Data/Row/: Aeson.hs  Dictionaries.hs  Internal.hs  Records.hs  Switch.hs  Variants.hs
aeson/: NOTICE  README.md  row-types-aeson.cabal
aeson/src/Data/Row/: Aeson.hs
barbies/: README.md  row-types-barbies.cabal  stack.yaml
barbies/src/Data/Row/: Barbies.hs
benchmarks/perf/: Main.hs
examples/: DefaultTest.hs  Examples.lhs  OverridingTypeClassInstances.hs  OverridingTypeClassInstances.md  Row-options.hs  RowCSV.hs  RowCSV.md  TypeSurgery.lhs  TypeSurgery.md  TypedErrors.lhs  TypedErrors.md
src/Data/: Row.hs
src/Data/Row/: Dictionaries.hs  Internal.hs  Records.hs  Switch.hs  Variants.hs
src/aeson/Data/Row/: Aeson.hs
src/barbies/Data/Row/: Barbie.hs  Barbies.hs
tests/: DiffPerformance.hs  Main.hs  MergePerformance.hs  UnionPerformance.hs
tests/datasize/: Main.hs
