Name:                CTRex
Version:             0.7
Synopsis:	           Open records using closed type families.
Description:         Open records using closed type families.
License:             BSD3
License-file:        LICENSE
Author:              Atze van der Ploeg
Maintainer:          atzeus@gmail.com
Homepage:            http://www.haskell.org/haskellwiki/CTRex
Build-Type:          Simple
Cabal-Version:       >=1.6
Data-files:          ChangeLog
Category:            Data, Data Structures
Tested-With:         GHC==7.8.2
Library
  Build-Depends: base >= 2 && < 6,
                 containers,
                 hashable >= 1.2,
                 mtl >= 1.0,
                 unordered-containers >= 0.2
  Exposed-modules: Data.OpenRecords,
                   Data.OpenRecords.Internal.Row,
                   Data.OpenRecords.Records,
                   Data.OpenRecords.Variants,
                   Data.OpenRecords.Switch
  ghc-options: -W
  other-modules:
  Extensions: AllowAmbiguousTypes,
              ConstraintKinds,
              DataKinds,
              EmptyDataDecls,
              FlexibleContexts,
              FlexibleInstances,
              GADTs,
              InstanceSigs,
              KindSignatures,
              MultiParamTypeClasses,
              PatternGuards,
              PolyKinds,
              RankNTypes,
              ScopedTypeVariables,
              TypeApplications,
              TypeFamilies,
              TypeOperators,
              TupleSections,
              ViewPatterns,
              UndecidableInstances

source-repository head
    type:     git
    location: https://github.com/atzeus/CTRex
