Name:                row-types
Version:             0.1
Synopsis:	           Open records and variants.
Description:         Open records and variants.
License:             BSD3
License-file:        LICENSE
Author:              Daniel Winograd-Cort
Maintainer:          dwincort@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.6
Category:            Data, Data Structures
Library
  Build-Depends: base >= 2 && < 6,
                 hashable >= 1.2,
                 unordered-containers >= 0.2
  Exposed-modules: Data.Row.Internal,
                   Data.Row.Records,
                   Data.Row.Variants,
                   Data.Row.Switch
  ghc-options: -W
  other-modules:
  Extensions: AllowAmbiguousTypes,
              ConstraintKinds,
              DataKinds,
              EmptyDataDecls,
              FlexibleContexts,
              FlexibleInstances,
              GADTs,
              InstanceSigs,
              KindSignatures,
              MultiParamTypeClasses,
              OverloadedLabels,
              PatternGuards,
              PolyKinds,
              RankNTypes,
              ScopedTypeVariables,
              TypeApplications,
              TypeFamilies,
              TypeOperators,
              TupleSections,
              ViewPatterns,
              UndecidableInstances

source-repository head
    type:     git
    location: https://git.target.com/RedOptHaskell/row-types/
