Name:                row-types
Version:             1.0.1.2
License:             MIT
License-file:        LICENSE
Author:              Daniel Winograd-Cort, Matthew Farkas-Dyck
Maintainer:          dwincort@gmail.com
homepage:            https://github.com/target/row-types
Build-Type:          Simple
Cabal-Version:       >=1.10
Tested-With:         GHC == 8.6.5, GHC == 8.8.3, GHC == 8.10.7, GHC == 9.0.1
Category:            Data, Data Structures
Synopsis:	           Open Records and Variants
Description:
  This package uses closed type families and type literals to implement open
  records and variants.
  The core is based off of the <https://hackage.haskell.org/package/CTRex CTRex>
  package, but it also includes polymorphic variants and a number of
  additional functions.  That said, it is not a proper superset of CTRex as it
  specifically forbids records from having more than one element of the same
  label.

extra-source-files:
  examples/Examples.lhs
  README.md
  CHANGELOG.md
  LICENSE
  NOTICE

Library
  Build-Depends:
    base >= 2 && < 6,
    constraints >= 0.11,
    deepseq >= 1.4,
    hashable >= 1.2,
    unordered-containers >= 0.2,
    generic-lens >= 1.0.0.0,
    profunctors >= 5.0,
    text
  Exposed-modules:
      Data.Row
    , Data.Row.Internal
    , Data.Row.Dictionaries
    , Data.Row.Records
    , Data.Row.Variants
    , Data.Row.Switch
  hs-source-dirs:
    src
  ghc-options: -W
  default-language: Haskell2010
  default-extensions:
      DataKinds
    , ExplicitForAll
    , GADTs
    , OverloadedLabels
    , TypeApplications
    , TypeOperators

benchmark perf
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      benchmarks/perf
  ghc-options: -W
  build-depends: base >= 2 && < 6
               , row-types
               , deepseq >= 1.4
               , gauge >= 0.2.0
  default-language: Haskell2010
  default-extensions: AllowAmbiguousTypes,
              DataKinds,
              OverloadedLabels,
              RankNTypes,
              ScopedTypeVariables,
              TypeApplications,
              TypeFamilies,
              TypeOperators

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests, examples
  ghc-options: -W +RTS -M1G -RTS
  other-modules: Examples,
                 DiffPerformance,
                 MergePerformance,
                 UnionPerformance
  build-depends: base >= 2 && < 6
               , generic-lens >= 1.1.0.0
               , row-types
  default-language: Haskell2010
  default-extensions: AllowAmbiguousTypes,
              DataKinds,
              FlexibleContexts,
              OverloadedLabels,
              PatternSynonyms,
              RankNTypes,
              ScopedTypeVariables,
              TypeApplications,
              TypeFamilies,
              TypeOperators,
              ViewPatterns


source-repository head
    type:     git
    location: https://github.com/target/row-types/
