Name:                row-types-aeson
Version:             1.0.0.0
License:             MIT
License-file:        LICENSE
Author:              Daniel Winograd-Cort, Matthew Farkas-Dyck
Maintainer:          dwincort@gmail.com
homepage:            https://github.com/target/row-types
Build-Type:          Simple
Cabal-Version:       >=1.10
Tested-With:         GHC == 8.6.5, GHC == 8.8.3, GHC == 8.10.7, GHC == 9.0.1
Category:            Data, Data Structures
Synopsis:	           aeson instances for Open Records and Variants
Description:
  This package is a small extension to the row-types library
  that includes aeson instances for row-types objects.

extra-source-files:
  README.md
  LICENSE
  NOTICE

library
  default-language: Haskell2010
  Build-Depends:
    aeson,
    base >= 2 && < 6,
    row-types,
    text
  Exposed-modules:
    Data.Row.Aeson
  hs-source-dirs:
    src


source-repository head
    type:     git
    location: https://github.com/target/row-types/
